HDL memory are optional, mod expr, assignation_input_list to assignation_conditions, i create SystemVerilog.g4
I apply antlr native Visitor design pattern to SystemVerilog.g4
I partially apply antlr native Visitor design pattern for HDL.g4
i removed vcc and gnd from input
I modify memory that is optional from hdl, sv and v test
modify ut to support verilog output